# MaxPhisher

./: Dockerfile  LICENSE  README.md  maxphisher.py  pyproject.toml  requirements.txt
